fixed issue with months calculation

--- a/index.html
+++ b/index.html
@@ -97,6 +97,9 @@
     <!--Firebase jquery-->
     <script src="https://www.gstatic.com/firebasejs/5.9.0/firebase.js"></script>
 
+    <!-- Moment -->
+    <script src="https://cdn.jsdelivr.net/momentjs/2.12.0/moment.min.js"></script>
+
     <!--Our Javascript-->
     <script src="assets/js/app.js"></script>
 </body>
